# pipelines

./: .gitignore  LICENSE  README.md  hello.py  main.py  pyproject.toml  requirements.txt  test.py
pipelines/: __init__.py  audio_mae.py  download.py  prompt_creation.py  utils.py
pipelines/audio_codec/: dac.py
pipelines/downloader/: __init__.py  download_url.py  download_youtube.py  downloader_abc.py
pipelines/downloaders/: __init__.py  youtube.py
pipelines/transcript/: __init__.py  transcription.py  utils.py
scripts/: codec_generator.py  convert_codec.py  dl.py  downloader.py  file_download.py  filter.py  huggingface.py  opus_convert.sh  preprocess.py  process.py  prompt_creator.py  push_to_huggingface.py  ray_process.py  split.py  split_data.py  transcribe.py  youtube_download.py
src/: exceptions.py  manage.py  utils.py
src/downloader/: __init__.py  download_url.py  downloader.py
src/filter/: __init__.py  deduplicate.py  filter.py  space.py
src/generator/: __init__.py  features_extractor.py  llm.py  process.py
src/pipelines/: __init__.py  cli.py  utils.py
src/pipelines/downloader/: download_url.py
src/pipelines/scripts/: dl.py  process.py
src/pipelines/transcript/: transcription.py  utils.py
