[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "timm>=1.0.15",
    "transformers>=4.52.3",
    "webdataset>=0.2.111",
    "yt-dlp>=2025.5.22",
]
